--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                </div>
 
                <div class="col-md-8 col-sm-8">
-                    <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hey there, My name is Jack Doe and I'm a Senior Interactive Designer & Web Developer.</h1>
+                    <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hey there, My name is Mayank Rahalkar and I'm a Infosec Professional.</h1>
                     <a href="#" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume</a>
                </div>
 
