--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </section>
 
 
-<!-- ABOUT SECTION -->
+<!-- ABOUT SECTION 
 <section id="about">
      <div class="container">
           <div class="row">
@@ -130,7 +130,8 @@
 
           </div>
      </div>
-</section>
+</section> 
+-->
 
 
 <!-- SKILL SECTION -->
