--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 -->
 
 
-<!-- SKILL SECTION -->
+<!-- SKILL SECTION
 <section id="skill">
      <div class="container">
           <div class="row">
@@ -179,7 +179,7 @@
           </div>
      </div>
 </section>
-
+-->
 
 <!-- WORK SECTION -->
 <section id="work">
