--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                               <img src="images/work-1.jpg" class="img-responsive" alt="Work">
                          </a>
                     </div>
-                    <h4>Graphic & Branding</h4>
+                    <h4>Networking Concepts</h4>
                </div>
 
                <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.6s">
@@ -210,7 +210,7 @@
                               <img src="images/work-2.jpg" class="img-responsive" alt="Work">
                          </a>
                     </div>
-                    <h4>Logo Design</h4>
+                    <h4>Network Pentesting</h4>
                </div>
 
                <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.8s">
@@ -220,7 +220,7 @@
                               <img src="images/work-3.jpg" class="img-responsive" alt="Work">
                          </a>
                     </div>
-                    <h4>Photography</h4>
+                    <h4>SOC</h4>
                </div>
 
                <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.8s">
@@ -230,7 +230,7 @@
                               <img src="images/work-4.jpg" class="img-responsive" alt="Work">
                          </a>
                     </div>
-                    <h4>Minimal Themes</h4>
+                    <h4>Forensics</h4>
                </div>
 
           </div>
