--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
 
                <div class="col-md-12 col-sm-12">
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-                         <h2>Seleted Works</h2>
-                         <p>Lorem ipsum dolor sit amet, consectetur venenatis tincidunt.</p>
+                         <h2>Infosec Work</h2>
+                         <p>This is the collection of my notes, projects and labs.</p>
                     </div>
                </div>
 
@@ -197,7 +197,7 @@
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
                          <a href="images/work-1.jpg" class="image-popup">
-                              <img src="images/work-1.jpg" class="img-responsive" alt="Work">
+                              <img src="images/networking.jpg" class="img-responsive" alt="Work">
                          </a>
                     </div>
                     <h4>Networking Concepts</h4>
@@ -207,7 +207,7 @@
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
                          <a href="images/work-2.jpg" class="image-popup">
-                              <img src="images/work-2.jpg" class="img-responsive" alt="Work">
+                              <img src="images/pentesting.jpg" class="img-responsive" alt="Work">
                          </a>
                     </div>
                     <h4>Network Pentesting</h4>
@@ -217,7 +217,7 @@
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
                          <a href="images/work-3.jpg" class="image-popup">
-                              <img src="images/work-3.jpg" class="img-responsive" alt="Work">
+                              <img src="images/soc.jpg" class="img-responsive" alt="Work">
                          </a>
                     </div>
                     <h4>SOC</h4>
@@ -227,7 +227,7 @@
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
                          <a href="images/work-4.jpg" class="image-popup">
-                              <img src="images/work-4.jpg" class="img-responsive" alt="Work">
+                              <img src="images/forensics.jpg" class="img-responsive" alt="Work">
                          </a>
                     </div>
                     <h4>Forensics</h4>
