--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-1.jpg" class="image-popup">
+                         <a href="images/networking.jpg" class="image-popup">
                               <img src="images/networking.jpg" class="img-responsive" alt="Work">
                          </a>
                     </div>
@@ -206,7 +206,7 @@
                <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.6s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-2.jpg" class="image-popup">
+                         <a href="images/pentesting.jpg" class="image-popup">
                               <img src="images/pentesting.jpg" class="img-responsive" alt="Work">
                          </a>
                     </div>
@@ -216,7 +216,7 @@
                <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.8s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-3.jpg" class="image-popup">
+                         <a href="images/soc.jpg" class="image-popup">
                               <img src="images/soc.jpg" class="img-responsive" alt="Work">
                          </a>
                     </div>
@@ -226,7 +226,7 @@
                <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.8s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-4.jpg" class="image-popup">
+                         <a href="images/forensics.jpg" class="image-popup">
                               <img src="images/forensics.jpg" class="img-responsive" alt="Work">
                          </a>
                     </div>
