--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
                <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.6s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/pentesting.jpg" class="image-popup">
-                              <img src="images/pentesting.jpg" class="img-responsive" alt="Work">
+                         <a href="images/pentesting.jpeg" class="image-popup">
+                              <img src="images/pentesting.jpeg" class="img-responsive" alt="Work">
                          </a>
                     </div>
                     <h4>Network Pentesting</h4>
@@ -216,8 +216,8 @@
                <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.8s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/soc.jpg" class="image-popup">
-                              <img src="images/soc.jpg" class="img-responsive" alt="Work">
+                         <a href="images/soc.jpeg" class="image-popup">
+                              <img src="images/soc.jpeg" class="img-responsive" alt="Work">
                          </a>
                     </div>
                     <h4>SOC</h4>
