--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
+<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50" bgcolor=”#800000">
 
 <!-- PRE LOADER -->
 <div class="preloader">
